@@ -27,6 +27,7 @@ K  6208	SASL authentication failures should not try other methods
 K  6238	add OAuth2 support to JavaMail
 K  6260	IMAP failures during close can leave connection unusable
 K  6261	need way to monitor IMAP responses
+K  6274	MimeUtility.encodeText() does not work with Unicode surrogate pairs
 
 
 		  CHANGES IN THE 1.5.1 RELEASE
